testsuite/tests/properties/invalid_symbol/bad_type/test.lkt
from common import FooNode

class Example: FooNode implements TokenNode {
    @exported fun p(): Symbol = node.is_null.symbol
}
